package models.da;

public enum UnidadDeConsumo {
  M3,
  LT,
  KG,
  LTS,
  KWH,
  KM,
}
